Added new DTO classes and DTOService to manage them; removed the old Response classes